--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,5 +1,5 @@
 <!-- Le javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="js/jquery-1.8.2.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="http://localhost:4000/js/jquery-1.8.2.min.js"></script>
+<script src="http://localhost:4000/js/bootstrap.min.js"></script>
