--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,12 +6,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="/">Δ</a>
+      <a class="brand" href="/"> <i class=" icon-eye-open icon-white"></i></a>
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li class="active"><a href="/about">About</a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="/projects">Projects</a></li>
+          <li classs=""><a href="/projects">Projects</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
