--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,7 @@
 ---
 layout: default
 ---
+<p class="lead"><small>{{page.date | date_to_string}}</small></p>
+<h1><a href="{{ post.url }}">{{ page.title }}</a></h1>
+
 {{ content }}
