--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,10 @@
 
 {% include navbar.html %}
 
-    <div class="container">
-    
+    <div class="container"
+	
     {{ content }}
-    
+	
     </div> <!-- /container -->
 
   </body>
