Getting ready for release
Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </a>
       <!--<a class="brand" href="/"> <i class=" icon-magnet icon-white"></i></a>-->
-      <a class="brand" href="/"> <i class=" icon-asterisk icon"></i></a>
+      <a class="brand" href="/"> &#916;</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
           {% if page.url == "/about/" %}
