--- a/_includes/css.html
+++ b/_includes/css.html
@@ -4,7 +4,7 @@
     padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
   }
 </style>
-<link href="http://localhost:4000/css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
