--- a/_includes/css.html
+++ b/_includes/css.html
@@ -5,6 +5,7 @@
   }
 </style>
 <link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/mods.css" rel="stylesheet">
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
