--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,10 +1,17 @@
 <div class="pagination">
 <ul>
+{% if paginator.total_pages >= 4 %}
+{% if paginator.page > 2 %}
+<li><a href="/">&laquo;</a></li>
+{% else %}
+{% endif %}
+{% endif %}
+
 {% if paginator.previous_page %}
 {% if paginator.previous_page == 1 %}
-<li class="disabled"><a href="#">&laquo;</a></li>
+<li><a href="/">&lsaquo;</a></li>
 {% else %}
-<li><a href="/page{{paginator.previous_page}}">&laquo;</a></li>
+<li><a href="/page{{paginator.previous_page}}">&lsaquo;</a></li>
 {% endif %}
 {% endif %}
 
@@ -24,9 +31,15 @@
 {% endfor %}
 
 {% if paginator.next_page %}
-<li class="active"><a href="/page{{paginator.next_page}}">&raquo;</a></li>
+<li><a href="/page{{paginator.next_page}}">&rsaquo;</a></li>
 {% else %}
-<li class="disabled"><a href="#">&raquo;</a></li>
+{% endif %}
+
+{% if paginator.total_pages >= 4 %}
+{% assign offset = paginator.total_pages | minus:1 %}
+{% if paginator.page < offset) %}
+<li><a href="/page{{paginator.total_pages}}">&raquo;</a></li>
+{% endif %}
 {% endif %}
 </ul>
 </div>
