--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -36,10 +36,11 @@
 {% endif %}
 
 {% if paginator.total_pages >= 4 %}
-{% assign offset = paginator.total_pages | minus:1 %}
-{% if paginator.page < offset) %}
+{% if paginator.page <  {{ {{paginator.total_pages}} | minus:1 }}  %}
 <li><a href="/page{{paginator.total_pages}}">&raquo;</a></li>
 {% endif %}
 {% endif %}
+
+{{ paginator.total_pages | minus:1 }}
 </ul>
 </div>
