--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 {% include header.html %}
+</head>
 
   <body>
 
@@ -13,3 +17,4 @@
   </body>
 
 {% include footer.html %}
+</html>
