--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,9 +1,10 @@
 <div class="pagination">
 <ul>
 {% if paginator.total_pages >= 4 %}
-{% if paginator.page > 2 %}
+{% if paginator.page > 1 %}
 <li><a href="/">&laquo;</a></li>
 {% else %}
+<li class="disabled"><a href="/">&laquo;</a></li>
 {% endif %}
 {% endif %}
 
@@ -13,10 +14,12 @@
 {% else %}
 <li><a href="/page{{paginator.previous_page}}">&lsaquo;</a></li>
 {% endif %}
+{% else %}
+<li class="disabled"><a href="#">&lsaquo;</a></li>
 {% endif %}
 
 {% if paginator.page == 1 %}
-<li class="disabled"><a href="#">1</a></li>
+<li class="active"><a href="#">1</a></li>
 {% else %}
 <li><a href="/">1</a></li>
 {% endif %}
@@ -33,12 +36,17 @@
 {% if paginator.next_page %}
 <li><a href="/page{{paginator.next_page}}">&rsaquo;</a></li>
 {% else %}
+<li class="disabled"><a href="#">&rsaquo;</a></li>
 {% endif %}
 
 {% if paginator.total_pages >= 4 %}
-{% if paginator.page <  {{ {{paginator.total_pages}} | minus:1 }}  %}
+{% if paginator.page < paginator.total_pages %}
 <li><a href="/page{{paginator.total_pages}}">&raquo;</a></li>
+{% else %}
+<li class="disabled"><a href="#}}">&raquo;</a></li>
 {% endif %}
 {% endif %}
+
+
 </ul>
 </div>
