--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <!--<div class="navbar navbar-inverse navbar-fixed-top">-->
-<div class="navbar navbar navbar-fixed-top">
+<div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -11,6 +11,11 @@
       <a class="brand" href="/"> &#916;</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
+          {% if page.url == "/index.html" %}
+          <li class="active"><a href="/">Blog</a></li>
+          {% else %}
+          <li class=""><a href="/">Blog</a></li>
+          {% endif %}
           {% if page.url == "/about/" %}
           <li class="active"><a href="/about">About</a></li>
           {% else %}
