--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 ================================================== -->
 <footer class="footer">
   <div class="container">
-    <p>This is a footer.</p>
+    <p>&copy; 2012 - Bret Comnes
   </div>
 </footer>
 
