Started re-working the html a lot
Cleaned up some white space, added html5 tags,
started refactoring a bunch of small things

Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,14 @@
 {% include header.html %}
 </head>
 
-  <body>
-
+<body>
 {% include navbar.html %}
 
-    <div class="container"
-	
-    {{ content }}
-	
-    </div> <!-- /container -->
+<section class="container" id="main">
+{{ content }}
+</section> <!-- /container -->
 
-  </body>
+</body>
 
 {% include footer.html %}
 </html>
