--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,5 +1,6 @@
-<meta charset="utf-8">
-<title>{{ page.title }}</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
+    <meta charset="utf-8">
+    <title>{{ page.title }}</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!--Twitter bootstrap For responsive stuff, I think-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
