--- a/_includes/post-content.html
+++ b/_includes/post-content.html
@@ -1,4 +1,4 @@
-{% if page.descriptor == "index" %}
+{% if page.layout == "index" %}
 <article class="post">
     <span>
         <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
@@ -13,7 +13,7 @@
         <h1><a href="{{ post.url }}">{{ page.title }}</a></h1>
         <p class="lead"><small>{{page.date | date_to_string}}</small></p>
     </span>
-    {{ content }}
+    {{ .content }}
     <hr>
 </article>
 {% endif %}
