--- a/_layouts/linklog.html
+++ b/_layouts/linklog.html
@@ -2,13 +2,11 @@
 layout: default
 ---
 
-<div class="linklog">
- <h3><a href="{{ page.external-url }}">{{ page.title }}</a>
-  <span class='linklog-marker'>&rarr;</span></h3>
-  <p class="lead"><small>
-	<a href="{{ page.url }}">&#916</a>
-	{{page.date | date_to_string}}
-	</small></p>
-  {{ content }}
-	<hr>
-</div>
+<article class="{{page.layout}}">
+    <span>
+        <h1><a href="{{ page.external-url }}">{{ page.title }}</a>
+        <h3 class='linklog-marker'>&rarr;</h3>
+        <p class="lead"><a href="{{ page.url }}">&#916</a>{{page.date | date_to_string}}</p>
+        {{ content }}
+        <hr>
+</article>
