--- a/_includes/css.html
+++ b/_includes/css.html
@@ -4,9 +4,9 @@
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
-    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
-    <link href="/css/mods.css" rel="stylesheet" type="text/css">
+    <link href="/components/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/components/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
+    <link href="/components/css/mods.css" rel="stylesheet" type="text/css">
     
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
