--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,5 +1,5 @@
 <!-- Le javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="/js/jquery-1.8.2.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
+<script src="/components/jquery/jquery.min.js"></script>
+<script src="/components/bootstrap/js/bootstrap.min.js"></script>
