Added the google verification code to the header
Removed the html file method.

Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,6 +1,7 @@
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>{{ page.title }}</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <!--Twitter bootstrap For responsive stuff, I think-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="1xXlZT_U_pGHsfrScC5v0cg5uydc53RXNLmX-1gXa44" />
