--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,50 +1,9 @@
-<div class="pagination">
-<ul>
-{% if paginator.total_pages >= 4 %}
-{% if paginator.page > 1 %}
-<li><a href="/">&laquo;</a></li>
-{% else %}
-<li class="disabled"><a href="/">&laquo;</a></li>
-{% endif %}
-{% endif %}
-
-{% if paginator.previous_page %}
-{% if paginator.previous_page == 1 %}
-<li><a href="/">&lsaquo;</a></li>
-{% else %}
-<li><a href="/page{{paginator.previous_page}}">&lsaquo;</a></li>
-{% endif %}
-{% else %}
-<li class="disabled"><a href="#">&lsaquo;</a></li>
-{% endif %}
-
-{% if paginator.page == 1 %}
-<li class="active"><a href="#">1</a></li>
-{% else %}
-<li><a href="/">1</a></li>
-{% endif %}
-
-{% for count in (2..paginator.total_pages) %}
-{% if count == paginator.page %}
-<li class="active"><a href="#">{{count}}</a></li>
-{% else %}
-<li><a href="/page{{count}}">{{count}}</a></li>
-{% endif %}
-{% endfor %}
-
-{% if paginator.next_page %}
-<li><a href="/page{{paginator.next_page}}">&rsaquo;</a></li>
-{% else %}
-<li class="disabled"><a href="#">&rsaquo;</a></li>
-{% endif %}
-
-{% if paginator.total_pages >= 4 %}
-{% if paginator.page < paginator.total_pages %}
-<li><a href="/page{{paginator.total_pages}}">&raquo;</a></li>
-{% else %}
-<li class="disabled"><a href="#}}">&raquo;</a></li>
-{% endif %}
-{% endif %}
-
-</ul>
-</div>
+<nav class="pagination">
+    <ul>
+        {% if paginator.total_pages >= 4 %}{% if paginator.page > 1 %}<li><a href="/">&laquo;</a></li>{% else %}<li class="disabled"><a href="/">&laquo;</a></li>{% endif %}{% endif %}
+        {% if paginator.previous_page %}{% if paginator.previous_page == 1 %}<li><a href="/">&lsaquo;</a></li>{% else %}<li><a href="/page{{paginator.previous_page}}">&lsaquo;</a></li>{% endif %}{% else %}<li class="disabled"><a href="#">&lsaquo;</a></li>{% endif %}
+        {% if paginator.page == 1 %}<li class="active"><a href="#">1</a></li>{% else %}<li><a href="/">1</a></li>{% endif %}{% for count in (2..paginator.total_pages) %}{% if count == paginator.page %}<li class="active"><a href="#">{{count}}</a></li>{% else %}<li><a href="/page{{count}}">{{count}}</a></li>{% endif %}{% endfor %}
+        {% if paginator.next_page %}<li><a href="/page{{paginator.next_page}}">&rsaquo;</a></li>{% else %}<li class="disabled"><a href="#">&rsaquo;</a></li>{% endif %}
+        {% if paginator.total_pages >= 4 %}{% if paginator.page < paginator.total_pages %}<li><a href="/page{{paginator.total_pages}}">&raquo;</a></li>{% else %}<li class="disabled"><a href="#}}">&raquo;</a></li>{% endif %}{% endif %}
+    </ul>
+</nav>
