testing something out
Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,7 @@
 <!-- Footer
 ================================================== -->
 <footer class="footer">
-  <div class="container">
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a><br />This work by <a xmlns:cc="http://creativecommons.org/ns#" href="https://www.bre.tc" property="cc:attributionName" rel="cc:attributionURL">Bret Comnes</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://twitter.github.com/bootstrap/" rel="dct:source">http://twitter.github.com/bootstrap/</a>.
-  </div>
+ This is a footer!
 </footer>
 
 {% include js.html %}
