--- a/_includes/pinboard.html
+++ b/_includes/pinboard.html
@@ -1,6 +1,6 @@
 <section id="pinboard">
   <h1>Bookmarks</h1>
-  <ul id="pinboard_linkroll"><p>Fetching linkroll&#8230;</p></ul>
+  <ul id="pinboard_linkroll"><li>Fetching linkroll&#8230;</li></ul>
   <p><a href="http://pinboard.in/u:bcomnes">My Pinboard Bookmarks &raquo;</a></p>
 </section>
 <script type="text/javascript">
