Removed header include.  No point to it.
Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-{% include header.html %}
+{% include meta.html %}
+
+{% include css.html %}
+
+{% include ico.html %}
 </head>
 
 <body>
