Variablized brand.  Added post section comments
Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<!--Begin Post "{{ page.title }}"-->
 <article class="{{page.layout}}">
     <span>
         <h1><a href="{{ page.url }}">{{ page.title }}</a></h1>
@@ -10,3 +10,4 @@ layout: default
     {{ content }}
     <hr>
 </article>
+<!--End Post "{{ page.title }}"-->
