--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,7 +1,8 @@
     <meta charset="utf-8" />
     <title>{{ page.title }}</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    {% if site.description %}<meta name="description" content="{{ site.description }}" />{% endif %}
+    {% if site.author %}<meta name="author" content="{{ site.author }}" />{% endif %}
     <!--Twitter bootstrap For responsive stuff, I think-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Google webmaster tools-->
     <meta name="google-site-verification" content="1xXlZT_U_pGHsfrScC5v0cg5uydc53RXNLmX-1gXa44" />
