--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,8 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <!--<a class="brand" href="/"> <i class=" icon-magnet icon-white"></i></a>-->
-            <a class="brand" href="/"> &#916;</a>
+            <a class="brand" href="/">{{ site.brand }}</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     {% if page.url == "/index.html" %}<li class="active"><a href="/">Blog</a></li>{% else %}<li class=""><a href="/">Blog</a></li>{% endif %}
