--- a/_includes/posterator.html
+++ b/_includes/posterator.html
@@ -1,28 +1,34 @@
-<section id="posts">
+<section id="posts"> <!-- Begin posts Section -->
 {% for post in paginator.posts %}
 {% case post.layout %}
 {% when 'post' %}
+<!--Begin Post "{{ post.title }}"-->
 <article class="{{post.layout}}">
 <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
 <p class="lead">{{post.date | date_to_string}}</p>
 {{ post.content }}
 <hr>
 </article>
+<!--End Post "{{ post.title }}"-->
 {% when 'linklog' %}
+<!--Begin Linklog "{{ post.title }}"-->
 <article class="{{post.layout}}">
 <h1><a href="{{ post.external-url }}">{{ post.title }}</a>
 <h3 class='linklog-marker'>&rarr;</h3>
-<p class="lead"><a href="{{ post.url }}">&#916</a>{{post.date | date_to_string}}</p>
+<p class="lead"><a href="{{ post.url }}">{% if site.brand %}{{ site.brand }}{% else %}&#8734;{% endif %}</a>{{post.date | date_to_string}}</p>
 {{ post.content }}
 <hr>
 </article>
+<!--End Linklog "{{ post.title }}"-->
 {% else %}
+<!--Begin Post "{{ post.title }}"-->
 <article class="{{post.layout}}">
 <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
 <p class="lead">{{post.date | date_to_string}}</p>
 {{ post.content }}
 <hr>
 </article>
+<!--End Post "{{ post.title }}"-->
 {% endcase %}
 {% endfor %}
 </section> <!-- End posts Section -->
