Fixed some CSS stuff, simplified mods.css
Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <!-- Footer
 ================================================== -->
 <footer class="footer">
-This is the best footer I could muster right now.    
+    <div class="container">
+            <p class="muted credit">Currently being assembled by <a href="https://github.com/bcomnes">Bret Comnes</a>.</p>
+          </div>   
 </footer>
