--- a/_includes/posterator.html
+++ b/_includes/posterator.html
@@ -2,33 +2,54 @@
 {% for post in paginator.posts %}
 {% case post.layout %}
 {% when 'post' %}
-<!--Begin Post "{{ post.title }}"-->
-<article class="{{post.layout}}">
-<h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-<p class="lead">{{post.date | date_to_string}}</p>
+<article class="{{post.layout}}"> <!--Begin Post "{{ post.title }}"-->
+<header>
+<h1>
+<a href="{{ post.url }}">{{ post.title }}</a>
+</h1>
+<p class="meta">
+<time datetime="{{ post.date | date_to_xmlschema }}" pubdate>{{post.date | date_to_string}}</time>
+</p>
+</header>
+<div class="entry-content">
 {{ post.content }}
-<hr>
+</div><!--End Post <div class="entry-content">-->
 </article>
 <!--End Post "{{ post.title }}"-->
-{% when 'linklog' %}
-<!--Begin Linklog "{{ post.title }}"-->
-<article class="{{post.layout}}">
-<h1><a href="{{ post.external-url }}">{{ post.title }}</a>
-<h3 class='linklog-marker'>&rarr;</h3>
-<p class="lead"><a href="{{ post.url }}">{% if site.brand %}{{ site.brand }}{% else %}&#8734;{% endif %}</a>{{post.date | date_to_string}}</p>
-{{ post.content }}
 <hr>
+{% when 'linklog' %}
+<article class="{{post.layout}}"> <!--Begin Linklog "{{ post.title }}"-->
+<header>
+<h1>
+<a href="{{ post.external-url }}">{{ post.title }}</a>
+<span class='linklog-marker'>&rarr;</span>
+</h1>
+<p class="meta">
+<time datetime="{{ post.date | date_to_xmlschema }}" pubdate>{{post.date | date_to_string}}</time>
+&bull; <a rel="bookmark" href="{{ post.url }}">{% if site.brand %}{{ site.brand }}{% else %}&#8734;{% endif %}</a>
+</p>
+<div class="entry-content">
+{{ post.content }}
+</div><!--End Post <div class="entry-content">-->
 </article>
 <!--End Linklog "{{ post.title }}"-->
-{% else %}
-<!--Begin Post "{{ post.title }}"-->
-<article class="{{post.layout}}">
-<h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-<p class="lead">{{post.date | date_to_string}}</p>
-{{ post.content }}
 <hr>
+{% else %}
+<article class="{{post.layout}}"> <!--Begin Post "{{ post.title }}"-->
+<header>
+<h1>
+<a href="{{ post.url }}">{{ post.title }}</a>
+</h1>
+<p class="meta">
+<time datetime="{{ post.date | date_to_xmlschema }}" pubdate>{{post.date | date_to_string}}</time>
+</p>
+</header>
+<div class="entry-content">
+{{ post.content }}
+</div><!--End Post <div class="entry-content">-->
 </article>
 <!--End Post "{{ post.title }}"-->
+<hr>
 {% endcase %}
 {% endfor %}
 </section> <!-- End posts Section -->
