--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,18 @@
 ---
 layout: default
 ---
-<!--Begin Post "{{ page.title }}"-->
-<article class="{{page.layout}}">
-<h1><a href="{{ page.url }}">{{ page.title }}</a></h1>
-<p class="lead">{{page.date | date_to_string}}</p>
+<article class="{{page.layout}}"> <!--Begin Post "{{ page.title }}"-->
+<header>
+<h1>
+<a href="{{ page.url }}">{{ page.title }}</a>
+</h1>
+<p class="meta">
+<time datetime="{{ page.date | date_to_xmlschema }}" pubdate>{{page.date | date_to_string}}</time>
+</p>
+</header>
+<div class="entry-content">
 {{ content }}
-<hr>
+</div><!--End Post <div class="entry-content">-->
 </article>
 <!--End Post "{{ page.title }}"-->
+<hr>
