Added note about where to place the CSS
among other notes

Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,13 @@
 <body>
 {% include navbar.html %}
 
-<section class="container" id="main">
+<!-- Main
+================================================== -->
+<div class="container" id="main">
+<section id="content">
 {{ content }}
-</section> <!-- /container -->
+</section>
+</div>
 
 {% include footer.html %}
 {% include js.html %}
