Did some CSS work on linklog
Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_layouts/linklog.html
+++ b/_layouts/linklog.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<article class="{{page.layout}}"> <!--Begin Linklog "{{ page.title }}"-->
+<article class="linklog"> <!--Begin Linklog "{{ page.title }}"-->
 <header>
-<h1>
+<h1 class="entry-title">
 <a href="{{ page.external-url }}">{{ page.title }}</a>
 <span class='linklog-marker'>&rarr;</span>
 </h1>
