--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<article class="{{page.layout}}"> <!--Begin Post "{{ page.title }}"-->
+<article class="post"> <!--Begin Post "{{ page.title }}"-->
 <header>
-<h1>
+<h1 class="entry-title">
 <a href="{{ page.url }}">{{ page.title }}</a>
 </h1>
 <p class="meta">
