--- a/_includes/posterator.html
+++ b/_includes/posterator.html
@@ -4,7 +4,7 @@
 {% when 'post' %}
 <article class="{{post.layout}}"> <!--Begin Post "{{ post.title }}"-->
 <header>
-<h1>
+<h1 class="entry-title">
 <a href="{{ post.url }}">{{ post.title }}</a>
 </h1>
 <p class="meta">
@@ -20,7 +20,7 @@
 {% when 'linklog' %}
 <article class="{{post.layout}}"> <!--Begin Linklog "{{ post.title }}"-->
 <header>
-<h1>
+<h1 class="entry-title">
 <a href="{{ post.external-url }}">{{ post.title }}</a>
 <span class='linklog-marker'>&rarr;</span>
 </h1>
@@ -37,7 +37,7 @@
 {% else %}
 <article class="{{post.layout}}"> <!--Begin Post "{{ post.title }}"-->
 <header>
-<h1>
+<h1 class="entry-title">
 <a href="{{ post.url }}">{{ post.title }}</a>
 </h1>
 <p class="meta">
