--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,9 @@
 <!-- Main
 ================================================== -->
 <div class="container" id="main">
-<section id="content">
+<div id="content">
 {{ content }}
-</section>
+</div>
 </div>
 
 {% include footer.html %}
