--- a/_layouts/linklog.html
+++ b/_layouts/linklog.html
@@ -8,7 +8,7 @@ layout: default
 <span class='linklog-marker'>&rarr;</span>
 </h1>
 <p class="meta">
-<time datetime="{{ page.date | date_to_xmlschema }}" pubdate>{{page.date | date_to_string}}</time>
+<time datetime="{{ page.date | date_to_xmlschema }}">{{page.date | date_to_string}}</time>
 &bull; <a rel="bookmark" href="{{ page.url }}">{% if site.brand %}{{ site.brand }}{% else %}&#8734;{% endif %}</a>
 </p>
 <div class="entry-content">
