--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
 <a href="{{ page.url }}">{{ page.title }}</a>
 </h1>
 <p class="meta">
-<time datetime="{{ page.date | date_to_xmlschema }}" pubdate>{{page.date | date_to_string}}</time>
+<time datetime="{{ page.date | date_to_xmlschema }}">{{page.date | date_to_string}}</time>
 </p>
 </header>
 <div class="entry-content">
