Put the bookmarks into a well and column.

--- a/_includes/pinboard.html
+++ b/_includes/pinboard.html
@@ -1,3 +1,5 @@
+<div class="span4">
+<div class="well well-small">
 <section id="pinboard">
   <h1>Bookmarks</h1>
   <ul id="pinboard_linkroll"><li>Fetching linkroll&#8230;</li></ul>
@@ -15,3 +17,5 @@
     document.getElementsByTagName('head')[0].appendChild(pinboardInit);
   })();
 </script>
+</div>
+</div>
