--- a/_includes/posterator.html
+++ b/_includes/posterator.html
@@ -2,54 +2,12 @@
 {% for post in paginator.posts %}
 {% case post.layout %}
 {% when 'post' %}
-<article class="{{post.layout}}"> <!--Begin Post "{{ post.title }}"-->
-<header>
-<h1 class="entry-title">
-<a href="{{ post.url }}">{{ post.title }}</a>
-</h1>
-<p class="meta">
-<time datetime="{{ post.date | date_to_xmlschema }}">{{post.date | date_to_string}}</time>
-</p>
-</header>
-<div class="entry-content">
-{{ post.content }}
-</div><!--End Post <div class="entry-content">-->
-</article>
-<!--End Post "{{ post.title }}"-->
-<hr>
+{% include content-post.html %}
 {% when 'linklog' %}
-<article class="{{post.layout}}"> <!--Begin Linklog "{{ post.title }}"-->
-<header>
-<h1 class="entry-title">
-<a href="{{ post.external-url }}">{{ post.title }}</a>
-<span class='linklog-marker'>&rarr;</span>
-</h1>
-<p class="meta">
-<time datetime="{{ post.date | date_to_xmlschema }}">{{post.date | date_to_string}}</time>
-&bull; <a rel="bookmark" href="{{ post.url }}">{% if site.brand %}{{ site.brand }}{% else %}&#8734;{% endif %}</a>
-</p>
-<div class="entry-content">
-{{ post.content }}
-</div><!--End Post <div class="entry-content">-->
-</article>
-<!--End Linklog "{{ post.title }}"-->
-<hr>
+{% include content-linklog.html %}
 {% else %}
-<article class="{{post.layout}}"> <!--Begin Post "{{ post.title }}"-->
-<header>
-<h1 class="entry-title">
-<a href="{{ post.url }}">{{ post.title }}</a>
-</h1>
-<p class="meta">
-<time datetime="{{ post.date | date_to_xmlschema }}">{{post.date | date_to_string}}</time>
-</p>
-</header>
-<div class="entry-content">
-{{ post.content }}
-</div><!--End Post <div class="entry-content">-->
-</article>
-<!--End Post "{{ post.title }}"-->
-<hr>
+{% include content-post.html %}
 {% endcase %}
+<hr>
 {% endfor %}
 </section> <!-- End posts Section -->
