Worked on the asides some more..
I think I just need to know CSS better.

--- a/_includes/asides/pinboard.html
+++ b/_includes/asides/pinboard.html
@@ -1,5 +1,3 @@
-<div class="span4">
-<div class="well well-small">
 <section id="pinboard">
   <h1>Bookmarks</h1>
   <ul id="pinboard_linkroll"><li>Fetching linkroll&#8230;</li></ul>
@@ -13,9 +11,7 @@
     var pinboardInit = document.createElement('script');
     pinboardInit.type = 'text/javascript';
     pinboardInit.async = true;
-    pinboardInit.src = '/components/js/pinboard.js';
+    pinboardInit.src = '/assets/js/pinboard.js';
     document.getElementsByTagName('head')[0].appendChild(pinboardInit);
   })();
 </script>
-</div>
-</div>
