--- a/_includes/css.html
+++ b/_includes/css.html
@@ -1,7 +1,7 @@
     <!-- Le styles -->
     <link href="/components/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- Bootstrap modifications reside between bootstrap.min.css and bootstrap-responsive.min.css-->
-    <link href="/components/css/mods.css" rel="stylesheet" type="text/css">
+    <link href="/assets/css/mods.css" rel="stylesheet" type="text/css">
     <link href="/components/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
