Played around with the CSS some more
Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 <div class="container" id="main">
 <div id="content">
 {{ content }}
-<!-- {% include asides.html %} -->
+{% include asides.html %}
 </div>
 </div>
 
