--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -2,6 +2,7 @@
     <title>{{ page.title }}</title>
     {% if site.description %}<meta name="description" content="{{ site.description }}" />{% endif %}
     {% if site.author %}<meta name="author" content="{{ site.author }}" />{% endif %}
+    {% if site.author %}<link rel="author" href="humans.txt" />{% endif %}
     <!--Twitter bootstrap For responsive stuff, I think-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Google webmaster tools-->
