Modified format, consolidated classes

--- a/_includes/asides.html
+++ b/_includes/asides.html
@@ -1,9 +1,5 @@
-<div class="sidebar">
-<div class="well well-small">
-<div class="row">
-    <div class="span4">
+<!-- ================================================================ -->
+<!-- Assides -->
+<div class="well well-small row" id="assides">
         {% include asides/pinboard.html %}
-    </div>
 </section>
-</div>
-</div>
