--- a/_includes/asides/pinboard.html
+++ b/_includes/asides/pinboard.html
@@ -1,4 +1,6 @@
-<section id="pinboard">
+<!-- ================================================================ -->
+<!-- Pinboard Asside -->
+<section class="span4" id="pinboard">
   <h1>Bookmarks</h1>
   <ul id="pinboard_linkroll"><li>Fetching linkroll&#8230;</li></ul>
   <p><a href="http://pinboard.in/u:bcomnes">My Pinboard Bookmarks &raquo;</a></p>
