--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,11 @@
 <body>
 {% include navbar.html %}
 
-<!-- Main
-================================================== -->
+<!-- ================================================================ -->
+<!-- Main -->
 <div class="container" id="main">
+<!-- ================================================================ -->
+<!-- Content -->
 <div id="content">
 {{ content }}
 {% include asides.html %}
