--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+<!-- ================================================================ -->
+<!-- Blog Index -->
 <section class="blog-index">
 {{ content }}
 </section>
