--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<!-- Footer
-================================================== -->
+<!-- ================================================================ -->
+<!-- Footer -->
 <footer class="footer">
     <div class="container">
             <p class="muted credit">Currently being assembled by <a href="https://github.com/bcomnes">Bret Comnes</a>.</p>
