--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,5 +1,5 @@
-<!-- Le javascript
-================================================== -->
+<!-- ================================================================ -->
+<!-- Le javascript -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="/components/jquery/jquery.min.js"></script>
 <script src="/components/bootstrap/js/bootstrap.min.js"></script>
