--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
-<!-- Navbar
-================================================== -->
+<!-- ================================================================ -->
+<!-- Navbar -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
