Checked in some minor changes
Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_includes/asides.html
+++ b/_includes/asides.html
@@ -2,4 +2,6 @@
 <!-- Assides -->
 <div class="well well-small row" id="assides">
         {% include asides/pinboard.html %}
+        <section class="span4" id=""><h1>Around the Web</h1></section>
+        <section class="span3" id=""><h1>Recent Posts</h1></section>
 </section>
