--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,18 +9,11 @@
 </head>
 
 <body>
+<header>
 {% include navbar.html %}
+</header>
 
-<!-- ================================================================ -->
-<!-- Main -->
-<div class="container" id="main">
-<!-- ================================================================ -->
-<!-- Content -->
-<div id="content">
 {{ content }}
-{% include asides.html %}
-</div>
-</div>
 
 {% include footer.html %}
 {% include js.html %}
