--- a/_layouts/linklog.html
+++ b/_layouts/linklog.html
@@ -1,4 +1,12 @@
 ---
 layout: default
 ---
+<!-- ================================================================ -->
+<!-- Linklog -->
+<!--
+    TODO Get rid of linklog div
+-->
+<div class="container">
 {% include content-linklog.html %}
+{% include asides.html %}
+</div>
