--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,11 +2,11 @@
 layout: default
 ---
 <!-- ================================================================ -->
-<!-- Post -->
+<!-- Page -->
 <!--
     TODO Get rid of post div
 -->
 <div class="container">
-{% include content-post.html %}
+{{ content }}
 {% include asides.html %}
 </div>
