--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,6 +3,10 @@ layout: default
 ---
 <!-- ================================================================ -->
 <!-- Blog Index -->
-<section class="blog-index">
+<!--
+    TODO Get rid of index div
+-->
+<div class="container" id="blog-index">
 {{ content }}
-</section>
+{% include asides.html %}
+</div>
