--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
 <!-- Footer -->
 <footer class="footer">
     <div class="container">
-            <p class="muted credit">Currently being assembled by <a href="https://github.com/bcomnes">Bret Comnes</a>.</p>
+            <p class="muted credit">Currently being assembled by <a href="/about">Bret Comnes</a>.</p>
+            <p class="muted credit">View the website <a href="https://github.com/bcomnes/bcomnes.github.com">source</a></p>
     </div>   
 </footer>
