Woops! Forgot to close that hgroup tag

--- a/_includes/content-post.html
+++ b/_includes/content-post.html
@@ -8,7 +8,7 @@
 <h2><small>
 <time datetime="{% include logic/pp-date-xml.html %}">{% include logic/pp-date-str.html %}</time>
 </small></h2>
-<hgroup>
+</hgroup>
 </header>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 {% include logic/pp-content.html %}
