Forgot to close <small> tag

--- a/_includes/asides/around_web.html
+++ b/_includes/asides/around_web.html
@@ -5,6 +5,6 @@
       <li><a href="http://www.flickr.com/">Flickr</a></li>
       <li><a href="http://steamcommunity.com/id/bret/">Steam</a></li>
       <li>bretolius on <a href="http://freenode.net/">Freenode</a>
-          <p><small>IRC messages are pushed to my mobile</p></li>
+          <p><small>IRC messages are pushed to my mobile</small></p></li>
   </ul>
 </section>
