Change the branding of the site
I will still keep the delta symbols for the 
linklog permalink

Might still need more work.  Just switching computers.

Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_includes/content-linklog.html
+++ b/_includes/content-linklog.html
@@ -4,11 +4,11 @@
 <hgroup>
 <h1>
 <a href="{% include logic/pp-external-url.html %}">{% include logic/pp-title.html %}</a>
-<small class='linklog-marker'>{{ site.marker }}</small>
+<small class='linklog-marker'>{{ site.linklog }}</small>
 </h1>
 <h2><small>
 <time datetime="{% include logic/pp-date-xml.html %}">{% include logic/pp-date-str.html %}</time>
-&bull; <a rel="bookmark" href="{% include logic/pp-url.html %}">{% if site.brand %}{{ site.brand }}{% else %}&#8734;{% endif %}</a>
+&bull; <a rel="bookmark" href="{% include logic/pp-url.html %}">{% if site.permalink_marker %}{{ site.permalink_marker }}{% else %}&#8734;{% endif %}</a>
 </small></h2>
 </hgroup>
 </header>
