Added some minor changes to the header and css meta

--- a/_includes/css.html
+++ b/_includes/css.html
@@ -1,9 +1,10 @@
     <!-- Le styles -->
-    <link href="/components/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/components/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap modifications reside between bootstrap.min.css and bootstrap-responsive.min.css-->
-    <link href="/assets/css/mods.css" rel="stylesheet" type="text/css">
-    <link href="/assets/css/syntax.css" rel="stylesheet" type="text/css">
-    <link href="/components/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
+    <link href="/assets/css/mods.css" rel="stylesheet">
+    <link href="/assets/css/syntax.css" rel="stylesheet">
+    <link href="/components/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link rel="alternate" type="application/atom+xml" title="Atom" href="/atom.xml" />
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
