--- a/assets/css/mods.css
+++ b/assets/css/mods.css
@@ -64,10 +64,11 @@ article header {
 }
 article header h1 {
     margin-bottom: 5px;
+    font-size: 3.5em;
 }
 article header h2 {
     line-height: 0px;
-    margin-top: 0px;
+    margin-top: 10px;
 }
 
 article header time {
