--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,7 +6,7 @@ layout: default
 <!--
     TODO Get rid of index div
 -->
-<div class="container" id="blog-index">
+<section class="container" id="blog-index">
 {{ content }}
 {% include asides.html %}
-</div>
+</section>
