--- a/_layouts/linklog.html
+++ b/_layouts/linklog.html
@@ -6,7 +6,7 @@ layout: default
 <!--
     TODO Get rid of linklog div
 -->
-<div class="container">
+<section class="container">
 {% include content-linklog.html %}
 {% include asides.html %}
-</div>
+</section>
