--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
 <!--
     TODO Get rid of post div
 -->
-<div class="container">
+<section class="container">
 {{ content }}
 {% include asides.html %}
-</div>
+</section>
