--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 <!--
     TODO Get rid of post div
 -->
-<div class="container">
+<section class="container">
 {% include content-post.html %}
 {% include asides.html %}
-</div>
+</section>
