Added more microdata

--- a/_includes/content-linklog.html
+++ b/_includes/content-linklog.html
@@ -2,18 +2,20 @@
 <article class="linklog">
 <header>
 <hgroup>
-<h1>
-<a href="{% include logic/pp-external-url.html %}">{% include logic/pp-title.html %}</a>
+<h1 itemprop="name">
+<a href="{% include logic/pp-external-url.html %}" itemprop="url">{% include logic/pp-title.html %}</a>
 <small class='linklog-marker'>{{ site.linklog }}</small>
 </h1>
 <h2><small>
-<time datetime="{% include logic/pp-date-xml.html %}">{% include logic/pp-date-str.html %}</time>
+<time datetime="{% include logic/pp-date-xml.html %}" itemprop="datePublished">{% include logic/pp-date-str.html %}</time>
 &bull; <a rel="bookmark" href="{% include logic/pp-url.html %}">{% if site.permalink_marker %}{{ site.permalink_marker }}{% else %}&#8734;{% endif %}</a>
 </small></h2>
 </hgroup>
 </header>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+<section itemprop="articleBody">
 {% include logic/pp-content.html %}
+</section>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 </article>
 <!--End Linklog "{% include logic/pp-title.html %}"-->
