Added some more microdata

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,6 +7,7 @@ layout: default
     TODO Get rid of index div
 -->
 <section class="container" id="blog-index">
+<meta>
 {{ content }}
 {% include asides.html %}
-</section>
+</section>  
