--- a/_includes/content-linklog.html
+++ b/_includes/content-linklog.html
@@ -1,5 +1,5 @@
 <!--Begin Linklog "{% include logic/pp-title.html %}"-->
-<article class="linklog" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="linklog" itemprop='blogPost' itemscope itemtype="http://schema.org/BlogPosting">
 <header>
 <hgroup>
 <h1 itemprop="name">
