--- a/_includes/content-post.html
+++ b/_includes/content-post.html
@@ -1,5 +1,5 @@
 <!--Begin Post "{% include logic/pp-title.html %}"-->
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="post" itemprop='blogPost' itemscope itemtype="http://schema.org/BlogPosting">
 <header>
 <hgroup>
 <h1 itemprop="name">
