--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,5 +1,6 @@
     <meta charset="utf-8" />
     <title>{% if paginator.page %}{% if paginator.page != 1 %} {{ site.brand }} ~ {{ paginator.page }}{% else %}{{ site.brand }}{% endif %}{% else %}{{ site.brand }} ~ {{ page.title }}{% endif %}</title>
+    <meta content='bre.tc' itemprop='name'/>
     {% if site.description %}<meta name="description" content="{{ site.description }}" />{% endif %}
     {% if site.author %}<meta name="author" content="{{ site.author }}" />{% endif %}
     {% if site.author %}<link rel="author" href="humans.txt" />{% endif %}
