--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,12 @@
 ---
 layout: default
+asides: true
 ---
 <!-- ================================================================ -->
 <!-- Post -->
 <!--
     TODO Get rid of post div
 -->
-<section class="container">
 {% include content-post.html %}
 
 <ul class="tag_box inline">
@@ -18,5 +18,3 @@ layout: default
         {% endfor %}
     {% endif %}
 </ul>
-{% include asides.html %}
-</section>
