--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,10 @@
 {% include navbar.html %}
 </header>
 
+<section class="container">
 {{ content }}
+{% if page.asides == true %}{% include asides.html %}{% endif %}
+</section>
 
 {% include footer.html %}
 {% include js.html %}
