Added webpage schema

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="/cache.manifest" itemscope="itemscope" itemtype="http://schema.org/Blog">
+<html lang="en" manifest="/cache.manifest" itemscope itemtype="http://schema.org/WebPage">
 <head>
 {% include meta.html %}
 
