--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,7 +3,7 @@
     <meta content='bre.tc' itemprop='name'/>
     {% if site.description %}<meta itemprop="description" name="description" content="{{ site.description }}" />{% endif %}
     {% if site.author %}<meta itemprop="author" name="author" content="{{ site.author }}" />{% endif %}
-    {% if site.author %}<link rel="author" href="humans.txt" />{% endif %}
+    <!--{% if site.author %}<link rel="author" href="humans.txt" />{% endif %}-->
     <!--Twitter bootstrap For responsive stuff, I think-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Google webmaster tools-->
