--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 {% include navbar.html %}
 </header>
 
-<section class="container" itemscope itemtype="http://schema.org/Blog">
+<section class="container">
 {{ content }}
 {% if page.asides == true %}{% include asides.html %}{% endif %}
 </section>
